@@ -530,7 +530,19 @@ sub calculate_formula_sum
              "summary formula could not be calculated -- $error\n";
     }
 
+    # FIXME: the local formula mitigations were a quick fix, however,
+    # it would be worthwhile to investingate and correct the issue
+    # in the formula generation subroutine
     if ( defined $formula ) {
+        # Mitigate formula generated by unknown ('?') atomic coordinates 
+        if ( $formula =~ m/^[?][0-9.]*$/ ) {
+            return undef;
+        }
+        # Mitigate formula generated by inapplicable ('.') atomic coordinates 
+        if ( $formula eq '' ) {
+            return undef;
+        }
+        # Decorate the existing formula
         $formula = '- ' . $formula . ' -';
     }
 
