@@ -2,4 +2,4 @@ Test the way the 'calcformula' (compound summary formula) and
 'cellformula' (unit cell summary formula) fields are calculated.
 If the explicit summary formula is not provided and there is no sufficient
 information to calculate the summary formula, both fields should be treated as
-undefined. 
+undefined.
