@@ -11,5 +11,5 @@ scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates
 scripts/cif2cod: tests/cases/cif2cod_064.inp data_no_formula_unknown_coordinates: WARNING, data item '_chemical_formula_sum' is absent.
 file;formula;calcformula;nel
 "no_formula_no_coordinates";"?";NULL;"0"
-"no_formula_unknown_coordinates";"?";"- ? -";"0"
-"no_formula_unknown_coordinates";"?";"-  -";"0"
+"no_formula_unknown_coordinates";"?";NULL;"0"
+"no_formula_unknown_coordinates";"?";NULL;"0"
