@@ -6,4 +6,4 @@ scripts/cif2cod: tests/cases/cif2cod_066.inp data_unknown_coordinates: WARNING, 
 scripts/cif2cod: tests/cases/cif2cod_066.inp data_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
 scripts/cif2cod: tests/cases/cif2cod_066.inp data_unknown_coordinates: WARNING, argument "?" isn't numeric in multiplication (*) at <script_name> line <line_no>.
 file;formula;calcformula;cellformula
-"unknown_coordinates";"?";"- ? -";"- ? -"
+"unknown_coordinates";"?";NULL;NULL
