@@ -1,3 +1,3 @@
 scripts/cif2cod: tests/cases/cif2cod_067.inp data_inapplicable_coordinates: WARNING, data item '_chemical_formula_sum' is absent.
 file;formula;calcformula;cellformula
-"inapplicable_coordinates";"?";"-  -";"-  -"
+"inapplicable_coordinates";"?";NULL;NULL
