@@ -9,6 +9,14 @@ cod-tools (unreleased)
         from the calculated formula instead of defaulting to '0' when the
         summary formula is not explicitly provided;
       - updated the text of several warning messages.
+  * Fixed:
+    - COD::CIF::Data::CIF2COD:
+      - updated the calculate_formula_sum() subroutine to return an undefined
+        value instead of a string consisting of question marks and digits
+        when processing CIF files with unknown ('?') coordinate values.
+      - updated the calculate_formula_sum() subroutine to return an undefined
+        value instead of a decorated empty string ('-  -') when processing
+        CIF files with inapplicable ('.') coordinate values.
 
 cod-tools (2.8)
 
